syntax = "proto3";

package protocol;

option go_package = "./gen;gen";

enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_CREATE_USER = 1;
  MESSAGE_TYPE_FOLLOW_USER = 2;
  MESSAGE_TYPE_UNFOLLOW_USER = 3;
  MESSAGE_TYPE_CREATE_TRACK = 4;
  MESSAGE_TYPE_REPOST_TRACK = 5;
  MESSAGE_TYPE_UNREPOST_TRACK = 6;
}

message Envelope {
  string signature = 1;
  MessageType message_type = 2;
}

// used for deserialization
message Base {
  Envelope envelope = 1;
}

message CreateUser {
  Envelope envelope = 1;
  Data data = 2;
  message Data {
    string id = 1;
    string address = 2;
    string handle = 3;
    string bio = 4;
  }
}

message FollowUser {
  Envelope envelope = 1;
  Data data = 2;
  message Data {
    string follower_id = 1;
    string followee_id = 2;
  }
}

message UnfollowUser {
  Envelope envelope = 1;
  Data data = 2;
  message Data {
    string follower_id = 1;
    string followee_id = 2;
  }
}

message CreateTrack {
  Envelope envelope = 1;
  Data data = 2;
  message Data {
    string id = 1;
    string title = 2;
    string stream_url = 3;
    string description = 4;
    string user_id = 5;
  }
}

message RepostTrack {
  Envelope envelope = 1;
  Data data = 2;
  message Data {
    string track_id = 1;
    string reposter_id = 2;
  }
}

message UnrepostTrack {
  Envelope envelope = 1;
  Data data = 2;
  message Data {
    string id = 1;
  }
}
